--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This module is created for learning and practicing JavaScript.",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +23,8 @@
   "homepage": "https://github.com/dmytro-serhiienko/javaScript-practice#readme",
   "devDependencies": {
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "nanoid": "^5.1.6"
   }
 }
